--- a/journal/202209.md
+++ b/journal/202209.md
@@ -75,7 +75,7 @@ _[dcrd](https://github.com/decred/dcrd) هو تطبيق عقدة كامل يعم
 * تحسين إنشاء قوالب الكتل لعدم جلب [المدخلات للمعاملة الأولى](https://github.com/decred/dcrd/pull/2994) في الكتلة (تلك التي تنشئ عملات جديدة) لأنه لا يمكن أن يكون لديها مدخلات.
 * [تحسين الذاكرة](https://github.com/decred/dcrd/pull/2993) المستخدمة في نسخ نصوص المعاملات.
 * تم إيقاف خيار واجهة سطر الأوامر [`--blockminsize`](https://github.com/decred/dcrd/pull/3002). يسمح هذا بإضافة معاملات منخفضة الرسوم أو مجانية إلى الكتلة بينما تكون الكتلة أقل من الحد الأدنى المحدد للحجم. تمت [إزالة](https://github.com/decred/dcrd/pull/2964) السياسة التي تسمح بترحيل مثل هذه المعاملات منخفضة الرسوم/المجانية (واستبدلت بتقنية Child Pays For Parent) وبالتالي لم تعد هناك حاجة إلى خيار واجهة سطر الأوامر هذا.
-* إعادة صياغة [ذاكرة التخزين المؤقت لمخرجات المعاملات غير المنفقة](https://github.com/decred/dcrd/pull/2995) لتحسين قوتها وتحسينها وتصحيح بعض corner cases التي يصعب الوصول إليها. توفر ذاكرة التخزين المؤقت هذه وصولاً سريعًا إلى العملات  المتداولة (المعروفة أيضًا باسم مخرجات المعاملات غير المنفقة - UTXO) وهي ضرورية للأداء، لأن كل كتلة تنفق بشكل أساسي العملات  الموجودة وتخلق عملات جديدة. و نظرًا لأنه كود مهم للإجماع، فقد تم تقسيم إعادة الصياغة إلى 19 تغييرًا مستقلاً لتسهيل المراجعة.
+* إعادة صياغة [ذاكرة التخزين المؤقت لمخرجات المعاملات غير المنفقة](https://github.com/decred/dcrd/pull/2995) لتحسين قوتها وتحسينها وتصحيح بعض الحالات المهمة التي يصعب الوصول إليها. توفر ذاكرة التخزين المؤقت هذه وصولاً سريعًا إلى العملات  المتداولة (المعروفة أيضًا باسم مخرجات المعاملات غير المنفقة - UTXO) وهي ضرورية للأداء، لأن كل كتلة تنفق بشكل أساسي العملات  الموجودة وتخلق عملات جديدة. و نظرًا لأنه كود مهم للإجماع، فقد تم تقسيم إعادة الصياغة إلى 19 تغييرًا مستقلاً لتسهيل المراجعة.
 * تمت إضافة نقل قاعدة بيانات [لإزالة مخرجات المعاملات غير المنفقة التي لا يمكن إنفاقها](https://github.com/decred/dcrd/pull/2996). على وجه التحديد، العملات  التي تم إنشاؤها بواسطة معاملة `treasurybase` (الجزء 10٪ من مكافأة الكتلة التي تذهب إلى الخزينة) لا يمكن إنفاقها بشكل مباشر، وبالتالي لا ينبغي أن تأخذ مساحة في قاعدة بيانات مخرجات المعاملات غير المنفقة.
 * تمت إزالة mempool وكود التعدين الذي يتعامل مع [سياسة ترحيل المعاملات منخفضة الرسوم والمجانية](https://github.com/decred/dcrd/pull/3003). تم إهمال خيار ذات الصلة `blockprioritysize--` والحقول الموجودة في استجابة `getrawmempool`.
 * ~6 طلبات سحب صيانة أخرى (إعادة بناء، تحديثات، تنظيف).
@@ -180,7 +180,7 @@ _الصورة: الرسوم التقديرية عند السحب من DCRDEX._
 
 ![](../img/202209.4.full.png)
 
-_الصورة: تشيرأيقونة لوحة النظام إلى أن عميل DEX قيد التشغيل._
+_الصورة: تشير أيقونة لوحة النظام إلى أن عميل DEX قيد التشغيل._
 
 ![](../img/202209.5.full.png)
 
