--- a/journal/202210.md
+++ b/journal/202210.md
@@ -324,7 +324,7 @@ _الصورة:  نسخ عقد dcrd  التي يمكن الوصول إليها_
 
 **المحتوى الغير إنجليزي:**
 
-*[Lula e Haddad registram plano de governo em blockchain para evitar fake news](https://haddadoficial.com.br/lula-e-haddad-registram-plano-de-governo-em-blockchain-para-evitar-fake-news/) (البرتغالية) - تمت تغطية القصة بواسطة h[Cointelegraph Brasil](https://cointelegraph.com.br/news/lula-and-haddad-register-government-plan-on-blockchain) و [BeInCrypto](https://br.beincrypto.com/planos-governo-lula-haddad-registrados-blockchain/).
+* [Lula e Haddad registram plano de governo em blockchain para evitar fake news](https://haddadoficial.com.br/lula-e-haddad-registram-plano-de-governo-em-blockchain-para-evitar-fake-news/) (البرتغالية) - تمت تغطية القصة بواسطة [Cointelegraph Brasil](https://cointelegraph.com.br/news/lula-and-haddad-register-government-plan-on-blockchain) و [BeInCrypto](https://br.beincrypto.com/planos-governo-lula-haddad-registrados-blockchain/).
 
 ![](../img/202210.9.github.jpg)
 
