--- a/journal/202210.md
+++ b/journal/202210.md
@@ -7,7 +7,7 @@ _الصورة: بدون عنوان بواسطة Exitus@_
 أبرز أحداث أكتوبر:
 
 * تم إصدار تصحيحات النسخة 1.7.5 للبرنامج الرئيسي لديكريد و النسخة 0.5.4 ل DCRDEX.
-* تم استخدام خدمة الطوابع الزمنية لديكريد (timestamp.decred.org) في وضع طابع زمني على وثائق الحملة السياسية للمرشحين في الانتخابات البرازيلية.
+* تم استخدام خدمة الطابع الزمني لديكريد (timestamp.decred.org) في وضع طابع زمني على وثائق الحملة السياسية للمرشحين في الانتخابات البرازيلية.
 * تلقى decred.org جولة أخرى من التحديثات، بما في ذلك صفحة الأخبار الجديدة حيث يمكنك العثور على أحدث إصدارات المجلة.
 * تم الاحتفاظ بخدمات Monde PR لمدة عام آخر بعد اقتراح ناجح بمعدل موافقة 66٪.
 
@@ -87,7 +87,7 @@ _[بوليتيا](https://github.com/decred/politeia) هي نظام المقتر
 
 _dcrlnd هو برنامج عقدة الشبكة البرقية لديكريد. تتيح الشبكة البرقية معاملات فورية ومنخفضة التكلفة._
 
-* يستمر الطابع الزمني [لآخر رسالة ثرثرة تم تلقيها](https://github.com/decred/dcrlnd/pull/165) للآن. عند إعادة التشغيل، يتم إرساله إلى نظير بعيد لطلب الرسائل منذ ذلك الطابع الزمني. يسمح هذا للعقد التي كانت غير متصلة بالإنترنت لبعض الوقت بجلب رسائل الثرثرة الفائتة (على وجه الخصوص، `ChannelUpdates`) لتحديث العرض المحلي للشبكة بشكل صحيح. قبل هذا التغيير، يمكن أن تفوت العقدة التي ظلت غير متصلة بالإنترنت لفترة من الزمن العديد من `ChannelUpdate`-s وتضع علامة غير صحيحة على القنوات الحالية على أنها زومبي في قاعدة البيانات.
+* يستمر الطابع الزمني [لآخر رسالة نمنمة تم تلقيها](https://github.com/decred/dcrlnd/pull/165) للآن. عند إعادة التشغيل، يتم إرساله إلى نظير بعيد لطلب الرسائل منذ ذلك الطابع الزمني. يسمح هذا للعقد التي كانت غير متصلة بالإنترنت لبعض الوقت بجلب رسائل النمنمة الفائتة (على وجه الخصوص، `ChannelUpdates`) لتحديث العرض المحلي للشبكة بشكل صحيح. قبل هذا التغيير، يمكن أن تفوت العقدة التي ظلت غير متصلة بالإنترنت لفترة من الزمن العديد من `ChannelUpdate`-s وتضع علامة غير صحيحة على القنوات الحالية على أنها زومبي في قاعدة البيانات.
 * [الصيانة](https://github.com/decred/dcrlnd/pull/165): تحديث الحد الأدنى من إصدار Go إلى 1.18، وتحديثه للتنسيق الجديد، وذاكرة التبعية.
 
 ### DCRDEX
