--- a/journal/202211.md
+++ b/journal/202211.md
@@ -351,7 +351,7 @@ _الصورة: توزيع إصدار عقدة dcrd._
 
 سيتم الآن عكس إعلانات ديكريد في [Fediverse](https://en.wikipedia.org/wiki/Fediverse) على [@decred](https://dcr.pw/@decred) على dcr.pw. قم بمتابعته إذا كنت تستخدم Mastodon أو مثيل آخر متوافق مع ActivityPub.
 
-لدى مجتمع Fediverse ما مجموعه 3 خدمات لديكريدالآن: مثيل Mastodon في citadel.stakey.net للشبكات الاجتماعية (رابط الدعوة)، مثيل PeerTube في tube.decredcommunity.org يعكس مقاطع فيديو اليوتيوب، و [@decred](https://dcr.pw/@decred) آخر لمتابعة إعلانات المشروع. نظرًا لأنهم جميعًا يتحدثون بروتوكول ActivityPub، فمن الممكن الحصول على كل من الإعلانات النصية ومقاطع الفيديو الجديدة في نفس الجدول الزمني للحساب.
+لدى مجتمع Fediverse ما مجموعه 3 خدمات لديكريد الآن: مثيل Mastodon في citadel.stakey.net للشبكات الاجتماعية (رابط الدعوة)، مثيل PeerTube في tube.decredcommunity.org يعكس مقاطع فيديو اليوتيوب، و [@decred](https://dcr.pw/@decred) آخر لمتابعة إعلانات المشروع. نظرًا لأنهم جميعًا يتحدثون بروتوكول ActivityPub، فمن الممكن الحصول على كل من الإعلانات النصية ومقاطع الفيديو الجديدة في نفس الجدول الزمني للحساب.
 
 تم تفعيل بوت ختم الوقت على التويتر مرة أخرى. اذكر [@dcrtimestampbot](https://twitter.com/dcrtimestampbot) في تغريدتك وسيحفظها الروبوت في IPFS، والطابع الزمني على سلسلة كتل ديكريد، والرد بروابط لعرض الإثبات والنسخة المحفوظة. في الوقت الحالي، يقتصر الروبوت على حفظ تغريدة واحدة فقط (أي لا توجد سلاسل رسائل) تذكر الروبوت مباشرةً. يمكن استخدام هذا للإدلاء ببيان وحمايته من التعديلات. يمكن لقراصنة Python الراغبين في المساعدة في تحسين الروبوت العثور على الكود المصدري [هنا](https://github.com/JC60522/dcr_timestampbot).
 
@@ -386,7 +386,7 @@ _الصورة: توزيع إصدار عقدة dcrd._
 
 **الفعاليات القادمة:**
 
-* تم اختيار @arij كعضو في لجنة الدورة السابعة عشرة من أمسية رواد الأعمال التي استضافتها JCI Casablanca، المغرب، حول موضوع “ريادة الأعمال النسائية”، حيث ستشارك تجربتها في العمل مع مشروع ديكريد وتجربة العمل في مجال سلسلة الكتل كامرأة. ومن المقرر عقد الفعالية في 20 ديسمبر.
+* تم اختيار @arij كعضو في لجنة الدورة السابعة عشرة من أمسية رواد الأعمال التي استضافتها JCI Casablanca، المغرب، حول موضوع “ريادة الأعمال النسائية”، حيث ستشارك تجربتها في العمل مع مشروع ديكريد وتجربة العمل في مجال سلسلة الكتل كإمرأة. ومن المقرر عقد الفعالية في 20 ديسمبر.
 
 ## وسائل الإعلام
 
