--- a/journal/202212.md
+++ b/journal/202212.md
@@ -128,7 +128,7 @@ _[DCRDEX](https://github.com/decred/dcrdex) هي منصة مبادلات غير 
   
 [إصدار النسخة ](https://github.com/decred/dcrdex/releases/tag/v0.5.8)0.5.8:
 
-- تمت إضافة [خيارات Core API](https://github.com/decred/dcrdex/pull/1568) لتخطي العمليات التي تستغرق وقتًا طويلاً عند بدء التشغيل وإيقاف التشغيل. يقوم `NoAutoWalletLock بتعطيل قفل المحفظة عند الإغلاق، وهو أمر مفيد لتجنب عملية فتح محتملة [طويلة جدًا](https://github.com/decred/dcrdex/pull/1568#discussion_r998877146). يقوم `NoAutoDBBackup` بتعطيل النسخ الاحتياطية التلقائية لقاعدة البيانات عند إيقاف التشغيل. في حين يوجه `UnlockCoinsOnLogin` المحفظة لفتح أي عملات (مخرجات) مقفلة بشكل فردي عند تسجيل الدخول أو إنشاء المحفظة، وهذا يؤدي إلى أتمتة الاسترداد اليدوي من [المشكلات](https://github.com/decred/dcrdex/pull/1568#discussion_r998880897) المتعددة التي تسببها التقطع في الاتصالات والأعطال أثناء وضع الطلب. يمكن أيضًا تعيين هذه الخيارات باستخدام مفاتيح التبديل الجديدة لتطبيق سطر أوامر `dexc`، ولكنها مخصصة حقًا للأشخاص الذين يكتبون كود Go الخاص بهم للتحكم في عميل DEX عبر `Core` API.
+- تمت إضافة [خيارات Core API](https://github.com/decred/dcrdex/pull/1568) لتخطي العمليات التي تستغرق وقتًا طويلاً عند بدء التشغيل وإيقاف التشغيل. يقوم `NoAutoWalletLock` بتعطيل قفل المحفظة عند الإغلاق، وهو أمر مفيد لتجنب عملية فتح محتملة [طويلة جدًا](https://github.com/decred/dcrdex/pull/1568#discussion_r998877146). يقوم `NoAutoDBBackup` بتعطيل النسخ الاحتياطية التلقائية لقاعدة البيانات عند إيقاف التشغيل. في حين يوجه `UnlockCoinsOnLogin` المحفظة لفتح أي عملات (مخرجات) مقفلة بشكل فردي عند تسجيل الدخول أو إنشاء المحفظة، وهذا يؤدي إلى أتمتة الاسترداد اليدوي من [المشكلات](https://github.com/decred/dcrdex/pull/1568#discussion_r998880897) المتعددة التي تسببها التقطع في الاتصالات والأعطال أثناء وضع الطلب. يمكن أيضًا تعيين هذه الخيارات باستخدام مفاتيح التبديل الجديدة لتطبيق سطر أوامر `dexc`، ولكنها مخصصة حقًا للأشخاص الذين يكتبون كود Go الخاص بهم للتحكم في عميل DEX عبر `Core` API.
 - إصلاح معالجة الطلبات الفاشلة [لأسعار العملات الورقية](https://github.com/decred/dcrdex/commit/2ae50bb7617706c62b86e4b16b684744c995c818) من الخدمات الخارجية، وتعديل وتيرتها لتجنب الوصول إلى حدود الاسعار.
 
 تم دمج التغييرات أدناه في الفرع الرئيسي `master` تجاه الإصدارات المستقبلية.
