--- a/journal/202212.md
+++ b/journal/202212.md
@@ -148,7 +148,7 @@ _[DCRDEX](https://github.com/decred/dcrdex) هي منصة مبادلات غير 
 
 - إعادة بناء تسلسل [تسجيل الدخول](https://github.com/decred/dcrdex/pull/1903) للتعامل بشكل أفضل مع محاولات تسجيل الدخول المتعددة وتجنب تكرار خطوات التهيئة. تمت إضافة تحذير يطالب بإلغاء قفل المحافظ في أسرع وقت ممكن لمعالجة التداولات النشطة.
 - إعادة بناء [تقدير الرسوم](https://github.com/decred/dcrdex/pull/1967) الشائعة بالنسبة للأصول الشبيهة بالبتكوين وإضافة مقدر رسوم خارجي لـ DOGE. يعد تقدير الرسوم الخارجية مفيدًا كبديل للمحافظ (الخفيفة) SPV وأيضًا محافظ RPC (الكاملة) التي بدأت مؤخرًا عندما لم تتم معايرة تقدير الرسوم الخاصة بها بعد.
-- تمت إضافة القيم الافتراضية](https://github.com/decred/dcrdex/pull/1981) للمحافظ التي تم إنشاؤها عبر RPC. هذا للمساعدة في الاختبار على شبكة الإختبار simnet.
+- تمت إضافة [القيم الافتراضية](https://github.com/decred/dcrdex/pull/1981) للمحافظ التي تم إنشاؤها عبر RPC. هذا للمساعدة في الاختبار على شبكة الإختبار simnet.
 - تم نقل المزيد من [ملفات ترجمة](https://github.com/decred/dcrdex/pull/1980) السلاسل.
 - تم ضبط [ضغط](https://github.com/decred/dcrdex/pull/1987) قاعدة البيانات لتوفير مساحة أكبر والإبلاغ عن التوفير بشكل أكثر دقة.
 - تمت إضافة المزيد من التقارير التفصيلية عن [التقدم](https://github.com/decred/dcrdex/pull/1997) أثناء تسجيل الدخول.
