--- a/journal/202212.md
+++ b/journal/202212.md
@@ -195,7 +195,7 @@ _[Bison Relay](https://github.com/companyzero/bisonrelay) هي منصة وسائ
 - [عميل واجهة المستخدم الرسومية](https://github.com/companyzero/bisonrelay/tree/master/bruig) هو تطبيق متعدد المنصات يقوم بنتفيذ بروتوكول Bison Relay مكتوب بلغة Dart و Flutter ومكتبة Go. [Flutter](https://flutter.dev) هي منصة واعدة لبناء تطبيقات واجهة المستخدم الرسومية عبر الأنظمة الأساسية لسطح المكتب الرئيسي (Linux و macOS و Windows) وأنظمة الأجهزة المحمولة (Android و iOS) من قاعدة بيانات واحدة.
 - يتم تشفير جميع اتصالات العميل إلى الخادم بشكل مزدوج باستخدام نفق TLS كطبقة خارجية وصندوق سر `NaCl secretbox` كطبقة داخلية.
 - يتم تشفير جميع اتصالات العميل إلى العميل [بسقاطة مزدوجة](https://signal.org/docs/specifications/doubleratchet/) (طبقة ثالثة من التشفير) بمفاتيح يمتلكها العملاء فقط.
-- يمكن العثور على مزيد من التفاصيل في دليل المستندات](https://github.com/companyzero/bisonrelay/tree/39015e62770ae6b18e73599a6fe497ceec463047/doc) و[نظرة عامة على البروتوكول](https://github.com/companyzero/bisonrelay/blob/39015e62770ae6b18e73599a6fe497ceec463047/rpc/README.md#protocol).
+- يمكن العثور على مزيد من التفاصيل في [دليل المستندات](https://github.com/companyzero/bisonrelay/tree/39015e62770ae6b18e73599a6fe497ceec463047/doc) و[نظرة عامة على البروتوكول](https://github.com/companyzero/bisonrelay/blob/39015e62770ae6b18e73599a6fe497ceec463047/rpc/README.md#protocol).
 
 تطبيق واجهة المستخدم الرسومية، التغييرات الصادرة في الإصدار [v0.1.1](https://github.com/companyzero/bisonrelay/releases/tag/v0.1.1):
 
