--- a/journal/202212.md
+++ b/journal/202212.md
@@ -384,7 +384,7 @@ Bison Relay[: الإنترنت السيادية](https://blog.decred.org/2022/12
 
 **أشرطة الفيديو:**
 
-* 2022[ عام السوق منخفضة الأسعار - ديكريد وحالة السوق](https://www.youtube.com/watch?v=PO2byx7D8z0) مع كل من @phoenixgreen و@Exitus و @Tivra ([إصدار صوتي(https://anchor.fm/decred-magazine/episodes/2022-the-year-of-the-bear---Decred-and-the-state-of-the-market-e1rnn2k) للبودكاست)
+* 2022[ عام السوق منخفضة الأسعار - ديكريد وحالة السوق](https://www.youtube.com/watch?v=PO2byx7D8z0) مع كل من @phoenixgreen و@Exitus و @Tivra ([إصدار صوتي](https://anchor.fm/decred-magazine/episodes/2022-the-year-of-the-bear---Decred-and-the-state-of-the-market-e1rnn2k) للبودكاست)
 * [ديكريد وثورة المقايضة الذرية - أساسيات منصة المبادلات اللامركزية لديكريد](https://www.youtube.com/watch?v=JyBoe1z5h9U) بواسطة phoenixgreen@ - متاح أيضًا [كبودكاست صوتي](https://anchor.fm/decred-magazine/episodes/Decred-and-the-Atomic-Swap-Revolution---DCRDEX-Fundamentals-e1s85ne) و[كمنشور نصي](https://www.decredmagazine.com/decred-and-the-atomic-swap-revolution/)
 * [إعداد الإصدار 0.1.1 ل Bison Relay على ](https://www.youtube.com/watch?v=L4jm-VMPmBo)macOS بواسطة phoenixgreen@
 * [النظرة الأولية (الإصدار 0.1.1) - ](https://www.youtube.com/watch?v=ukRkQC4IXoo)Bison Relay بواسطة phoenixgreen@
