--- a/journal/202301.md
+++ b/journal/202301.md
@@ -394,7 +394,7 @@ _الصورة: انخفض معدل وحدات ديكريد المخلوطة وغ
 نظم Tivra@ المعروف أيضًا باسم [@WasPraxis](https://twitter.com/WasPraxis) خمس فضاءَات جديدة على التويتر:
 
 * 2023[: عام عملة الخصوصية؟](https://twitter.com/i/spaces/1YqKDobzqoOxV) بمشاركة أعضاء مجتمع المونيرو (متوفر أيضًا على [Anchor](https://anchor.fm/decred-magazine/episodes/2023-The-Year-of-the-Privacy-Coin-e1t4mst) + نسخة منقحة على [اليوتيوب](https://www.youtube.com/watch?v=5ttufSLhsE0))
-* [أدوات الخصوصية لعصر سيادي](https://twitter.com/i/spaces/1jMJgLyXXEyxL بمشاركة أعضاء مجتمع ديكريد و المونيرو ([Anchor](https://anchor.fm/decred-magazine/episodes/Privacy-Tools-for-a-Sovereign-Age---Decred-Twitter-Space-e1tf0g9))
+* [أدوات الخصوصية لعصر سيادي](https://twitter.com/i/spaces/1jMJgLyXXEyxL) بمشاركة أعضاء مجتمع ديكريد و المونيرو ([Anchor](https://anchor.fm/decred-magazine/episodes/Privacy-Tools-for-a-Sovereign-Age---Decred-Twitter-Space-e1tf0g9))
 * [خمسة مقترحات - مناقشة عامة](https://twitter.com/i/spaces/1YpKkgeoVqwKj) - التحدث مع مقدمي المقترحات والمجتمع حول أحدث مجموعة من المقترحات ([Anchor](https://anchor.fm/decred-magazine/episodes/Decred-Twitter-Space-5-Proposals-Up-General-Discussion-hosted-by-WasPraxis-e1tpati))
 * [لماذا تعتبر الخصوصية أمرًا بالغ الأهمية لعملة تعمل بكامل طاقتها](https://twitter.com/i/spaces/1YqJDoDNrnzGV) بمشاركة المؤسس المشارك Firo لـ [Reuben Yap](https://twitter.com/reubenyap) على ([Anchor](https://anchor.fm/decred-magazine/episodes/Why-Privacy-is-Critical-for-a-Fully-Functional-Currency---Decred--Firo-Twitter-Space-e1u52o8))
 * [فضاء مقترحات ](https://twitter.com/i/spaces/1jMKgLAlLXgGL)DCR - الدردشة الثانية مع أصحاب المقترحات لمناقشة أهدافهم ونتائجهم ([Anchor](https://anchor.fm/decred-magazine/episodes/DCR-Proposals-Space-e1u9f9j))
