--- a/journal/202303.md
+++ b/journal/202303.md
@@ -14,7 +14,7 @@ __الصورة: بدون عنوان بواسطة Exitus@_
 المحتويات:
 
 * [اقتراح لتغيير خوارزمية إثبات العمل وتقليل مكافآت إثبات العمل](#اقتراح-لتغيير-خوارزمية-إثبات-العمل-و-تقليل-مكافآت-إثبات-العمل)
-* [إصدار المرشح 1 للنسخة 0.1.6 ل Bison Relay](#إصدار-المرشح-1-للنسخة-0.1.6-لBison-Relay)
+* [إصدار المرشح 1 للنسخة 0.1.6 لمُرَحِّل بيسون](#إصدار-المرشح-1-للنسخة-0.1.6-لBison-Relay)
 * [التطوير](#التطوير)
 * [الأشخاص](#الأشخاص)
 * [الإدارة و الحوكمة](#الإدارة-و-الحوكمة)
@@ -53,7 +53,7 @@ __الصورة: بدون عنوان بواسطة Exitus@_
 * يتم توجيه جميع تعليقات المنشور إلى المنشور الأصلي ، ويتم تعطيل التعليقات على النسخ التي تم ترحيلها
 * العديد من إصلاحات الأخطاء وتحسينات واجهة المستخدم في كل من واجهة المستخدم الرسومية وتطبيقات واجهة سطر الأوامر
 
-احصل على أحدث إصدارات ثنائية على [GitHub](https://github.com/companyzero/bisonrelay/releases) (حتى وقت الكتابة لا تزال صفحة التنزيلات في bisonrelay.org تظهر الإصدار 0.1.4). يتم الترحيب بتقارير الأخطاء وردود الفعل في أداة [تعقب مشكلات ](https://github.com/companyzero/bisonrelay/issues)GitHub و [دردشة #](https://chat.decred.org/#/room/#br:decred.org)br على Matrix أو Bison Relay نفسها.
+احصل على أحدث إصدارات ثنائية على [GitHub](https://github.com/companyzero/bisonrelay/releases) (حتى وقت الكتابة لا تزال صفحة التنزيلات في bisonrelay.org تظهر الإصدار 0.1.4). يتم الترحيب بتقارير الأخطاء وردود الفعل في أداة [تعقب مشكلات ](https://github.com/companyzero/bisonrelay/issues)GitHub و [دردشة #](https://chat.decred.org/#/room/#br:decred.org)br على Matrix أو مُرَحِّل بيسون نفسها.
 
 ## التطوير
 
@@ -115,12 +115,6 @@ _[vspd](https://github.com/decred/vspd) هو برنامج خادم لتشغيل 
 * تمت إضافة [تحديد معدل](https://github.com/decred/vspd/pull/373) لطلبات تسجيل دخول المشرف (بحد أقصى 3 محاولات في الثانية)، ونموذج لتهيئة Nginx لدعمها.
 * تمت إضافة [أداة تطوير](https://github.com/decred/vspd/pull/366) جديدة لاختبار الخطوات المختلفة لبروتوكول مزود خدمة التصويت: إنشاء معاملة رسوم مزود خدمة التصويت، وإرسالها إلى مزود خدمة التصويت، والاستعلام عن حالة التذكرة، وتغيير خيارات التصويت الخاصة بالتذكرة. يمكن لمشغلي مزودي خدمة التصويت استخدام هذه الأداة للتحقق من أن مقدم خدمة التصويت الخاص بهم يعمل بشكل صحيح.
 * زيادة تغطية الاختبار.
-
-### dcrpool
-
-_[dcrpool](https://github.com/decred/dcrpool) هو برنامج خادم لتشغيل مجمع التعدين._
-
-* تم التحديث إلى  [Go 1.18](https://github.com/decred/dcrpool/pull/338).
 
 ### الشبكة البرقية
 
