--- a/journal/202305.md
+++ b/journal/202305.md
@@ -24,7 +24,7 @@ _الصورة: عاصفة إلكترونية بواسطة Exitus@_
 * [الأسواق](#الأسواق)
 * [الخارجية ذات الصلة](#الخارجية-ذات-الصلة)
 
-<a id="DCRDEX v0.6.1 Release" />
+<a id="dcrdex-v061-release" />
 
 ## إصدار النسخة 0.6.1 لمنصة المبادلات اللامركزية لديكريد
 
@@ -317,7 +317,6 @@ _الصورة: إجمالي الرسوم الشهرية - لا تزال ديكر
 
 يوجد الآن مخططات أكثر مما يمكن إظهاره في المجلة. يمكن العثور على الرسوم البيانية أعلاه وغيرها [هنا](https://github.com/bochinchero/dcrsnapshots) - يُنصح بشدة بإعادة الاستخدام على وسائل التواصل الاجتماعي!
 
-
 <a id="ecosystem" />
 ## النظام البيئي
 
@@ -348,7 +347,6 @@ _الصورة: إجمالي الرسوم الشهرية - لا تزال ديكر
 
 تحذير: ليس لدى مؤلفي مجلة ديكريد أي فكرة عن مصداقية أي من الخدمات أعلاه. يرجى إجراء بحثك الخاص قبل الوثوق بمعلوماتك الشخصية أو أصولك لأي كيان.
 
-
 <a id="outreach" />
 ## الإنتشار
 
@@ -373,14 +371,12 @@ _الصورة: غرفة حرب Vanguard_
 
 * تم إجراء مقابلة مع @jy-p بواسطة [Authority Magazine](https://medium.com/authority-magazine/the-future-is-now-jake-yocom-piatt-on-how-their-technological-innovation-will-shake-u-3966dc1adc22) لمناقشة العديد من جوانب ديكريد بما في ذلك: قصة أصل ديكريد، عرض Bison مُرحِّل بيسون كإنترنت سيادي، والدعم القادم للصفحات ومتاجر التجارة الإلكترونية، بوليتيا، واستخدام ديكريد في الانتخابات البرازيلية.
 
-
 <a id="events" />
 ## الفعاليات
 
 **الحضور:**
 
 حضر كل من arij@ و khalidesi@ فعالية [EMEC EXPO](https://emecexpo.ma) في الدار البيضاء، المغرب، وهو حدث كبير مخصص للتقنيات الرقمية حضره ما يقارب 9 آلاف شخص. كان للفريق منصة حيث شرحوا ميزات ديكريد للزوار من مختلف المجالات، وتفاعلوا مع العديد من الشركات المغربية، والتقوا ببعض الأشخاص الذين كانوا على دراية بالمشروع بالفعل. التقرير الكامل [هنا](https://decredcommunity.github.io/events/index/20230511.1)
-
 
 <a id="media" />
 ## وسائل الإعلام
@@ -438,7 +434,6 @@ _الصورة: ديكريد تستغني عن الصابورة. بواسطة Off
 * [خصوصية الإنترنت وسبب أهميتها](https://www.decredmagazine.com/internet-privacy-and-why-it-is-important/) - [باللغة الصينية](https://github.com/DominicTing/decred-ZH-translations/blob/master/Internet%20Privacy%20and%20Why%20it%20is%20Important.md)  بواسطة Dominic@
 * تمت [ترجمة](https://xaur.github.io/decred-news/) مجلة ديكريد في أبريل 2023 إلى الصينية بواسطة  - شكرًا لك!
 
-
 <a id="markets" />
 ## الأسواق
 
@@ -462,8 +457,7 @@ _الصورة: تحليل مناطق تراكم DCR/USD بواسطة saender@_
 
 _الصورة: الحجم الشهري لمنصة المبادلات اللامركزية لديكريد  بالدولار الأمريكي_
 
-
-<a id="relevant external" />
+<a id="relevant-external" />
 ## الخارجية ذات الصلة
 
 [واجهت](https://www.theblock.co/post/230680/ethereum-beacon-chain-finality-issue) سلسلة Ethereum' s Beacon بعض المشكلات مع الحقيقة المُطْلَقَة، حادثان عرضيان حيث توقف المصدقون في الغالب عن اقتراح الشهادات لمدة ساعة تقريبًا ولا أحد متأكد من السبب. تمكنت المعاملات على شبكة الإيثيريوم من الاستمرار وبالتالي ربما لم يلاحظ المستخدمون أي مشاكل، ولكن خلف الكواليس، كانت سلسلة beacon التي تضع اللمسات الأخيرة على كل شيء لا تعمل، لذا كانت هذه المعاملات أكثر عرضة للعودة مما كان عليه الحال في العادة. أصدر مطورو الإيثيريوم الأساسيون تصحيحات للعميلين المتأثرين بالمشكلة (Go-based [Prysm](https://github.com/prysmaticlabs/prysm) من Prysmatic Labs و Java-based [Teku](https://github.com/ConsenSys/teku) من ConsenSys)، والتي نتجت عن الحمل العالي بشكل استثنائي على العقد التي تدير هؤلاء العملاء.
