--- a/journal/202305.md
+++ b/journal/202305.md
@@ -12,17 +12,17 @@ _الصورة: عاصفة إلكترونية بواسطة Exitus@_
 
 المحتويات:
 
-* [إصدار النسخة 0.6.1 لمنصة المبادلات اللامركزية لديكريد](#إصدار-النسخة-0.6.1-لمنصة-المبادلات-اللامركزية-لديكريد)
-* [التطوير](#التطوير)
-* [الأشخاص](#الأشخاص)
-* [الإدارة و الحوكمة](#الإدارة-و-الحوكمة)
-* [الشبكة](#الشبكة)
-* [الانتشار](#الانتشار)
-* [الفعاليات](#الفعاليات)
-* [وسائل الإعلام](#وسائل-الإعلام)
-* [مناقشات المجتمع](#مناقشات-المجتمع)
-* [الأسواق](#الأسواق)
-* [الخارجية ذات الصلة](#الخارجية-ذات-الصلة)
+* [إصدار النسخة 0.6.1 لمنصة المبادلات اللامركزية لديكريد](#dcrdex-v061-releaseد)
+* [التطوير](#development)
+* [الأشخاص](#people)
+* [الإدارة و الحوكمة](#governance)
+* [الشبكة](#network)
+* [النظام البيئي](#ecosystem)
+* [الانتشار](#outreach)
+* [الفعاليات](#events)
+* [وسائل الإعلام](#media)
+* [الأسواق](#markets)
+* [الخارجية ذات الصلة](#relevant-external)
 
 <a id="dcrdex-v061-release" />
 
