--- a/journal/202305.md
+++ b/journal/202305.md
@@ -12,7 +12,7 @@ _الصورة: عاصفة إلكترونية بواسطة Exitus@_
 
 المحتويات:
 
-* [إصدار النسخة 0.6.1 لمنصة المبادلات اللامركزية لديكريد](#dcrdex-v061-releaseد)
+* [إصدار النسخة 0.6.1 لمنصة المبادلات اللامركزية لديكريد](#dcrdex-v061-release)
 * [التطوير](#development)
 * [الأشخاص](#people)
 * [الإدارة و الحوكمة](#governance)
