--- a/journal/202305.md
+++ b/journal/202305.md
@@ -356,7 +356,7 @@ _الصورة: إجمالي الرسوم الشهرية - لا تزال ديكر
   
 ## الإنتشار
 
-تمت [الموافقة](https://proposals.decred.org/record/0a1b782) على Decred Vanguard وبدأت عمليات الإنتشار الخاصة بها. تمتلك Vanguard خادم Discord الخاص بها حيث يقوم الأعضاء بالتنسيق وتطوير أفضل الأساليب وتقييم النتائج. يستفيد الأعضاء من Midjourney AI لإنشاء فن متقدم للمساعدة في إيصال رسالة ديكريد. حصل العديد من الأعضاء على Twitter Blue ويبدو أنه يعمل بشكل جيد. التحدي الرئيسي في هذه المرحلة هو تجنيد أعضاء نشطين ومنتجين، وهذا هو السبب في أن الراتب الشهري الأولي منخفض عند 100 دولار. التحدي الآخر هو التسويق في السوق الهابطة. في مايو، لم يتم تخصيص جوائز للمشاركات الكبيرة/البارزة.
+تمت [الموافقة](https://proposals.decred.org/record/0a1b782) على Decred Vanguard وبدأت عمليات الإنتشار الخاصة بها. تمتلك Vanguard خادم Discord الخاص بها حيث يقوم الأعضاء بالتنسيق وتطوير أفضل الأساليب وتقييم النتائج. يستفيد الأعضاء من Midjourney الذكاء الاصطناعي لإنشاء فن متقدم للمساعدة في إيصال رسالة ديكريد. حصل العديد من الأعضاء على Twitter Blue ويبدو أنه يعمل بشكل جيد. التحدي الرئيسي في هذه المرحلة هو تجنيد أعضاء نشطين ومنتجين، وهذا هو السبب في أن الراتب الشهري الأولي منخفض عند 100 دولار. التحدي الآخر هو التسويق في السوق الهابطة. في مايو، لم يتم تخصيص جوائز للمشاركات الكبيرة/البارزة.
 
 يجب على أي شخص مهتم بالانضمام إلى Decred Vanguard الاتصال بـ [@Tivra](https://twitter.com/WasPraxis) أو [@Exitus](https://twitter.com/exitusdcr). إذا كنت جديدًا في ديكريد، فلا بأس - ما عليك سوى أن تكون على استعداد للتعلم والمساعدة حيثما أمكنك ذلك.
 
