--- a/journal/202306.md
+++ b/journal/202306.md
@@ -53,10 +53,8 @@ _الصورة: عمل فني بواسطة @Exitus_
 
 مميزات إصدار 1.8.0 المعروف أيضًا باسم ["The Forkening”](https://twitter.com/decredproject/status/1668722927661973505):
 
-**dcrd**: تحديثان جديدان للإجماع (واللذان سيؤديان إلى تفرع السلسلة إذا تمت الموافقة عليهما)، التعدين بوحدة المعالجة المركزية BLAKE3، ورفض معاملات الرسوم المنخفضة، والعديد من التحسينات التي تؤدي إلى تقليل وقت المزامنة الأولي بنحو 20٪ وإدارة أفضل لذاكرة وقت التشغيل، وتحسين أوقات التصويت، والعديد من التحديثات الأخرى.
-
-**dcrwallet**: دعم تغييري الإجماع الجديدين (على سبيل المثال عند التحقق من صحة الكتل أو إنشاء الأصوات)، وشراء التذاكر المخلوطة مع دعم التدرج لمزيد من الخصوصية، وجلب نفقات الخزينة في وضع التحقق البسيط من الدفع (مطلوب لتصويت TSpend في وضع التحقق البسيط من الدفع)، وطرق gRPC الجديدة للاستخدام بواسطة تطبيقات واجهة المستخدم الرسومية، وإصلاحات متعددة للأخطاء.
-
+برنامج (**dcrd**) تحديثان جديدان للإجماع (واللذان سيؤديان إلى تفرع السلسلة إذا تمت الموافقة عليهما)، التعدين بوحدة المعالجة المركزية مع تغيير خوارزمية الهاش الى (BLAKE3)، ورفض معاملات الرسوم المنخفضة، والعديد من التحسينات التي تؤدي إلى تقليل وقت المزامنة الأولي بنحو 20٪ وإدارة أفضل لذاكرة وقت التشغيل، وتحسين أوقات التصويت، والعديد من التحديثات الأخرى.
+برنامج (**dcrwallet**) دعم تغييري الإجماع الجديدين (على سبيل المثال عند التحقق من صحة الكتل أو إنشاء الأصوات)، وشراء التذاكر المخلوطة مع دعم التدرج لمزيد من الخصوصية، وجلب نفقات الخزينة في وضع التحقق البسيط من الدفع (مطلوب لتصويت TSpend في وضع التحقق البسيط من الدفع)، وطرق gRPC الجديدة للاستخدام بواسطة تطبيقات واجهة المستخدم الرسومية، وإصلاحات متعددة للأخطاء.
 **ديكريديتون**: القدرة على التصويت على معاملات TSpend الفردية، مع تحديث وحدة منصة المبادلات اللامركزية لديكريد، و تحديث التخطيطات والأنماط، والعديد من إصلاحات الأخطاء والتحسين عبر جميع الصفحات/علامات التبويب.
 
 قم بزيارة [إصدار ](https://github.com/decred/decred-binaries/releases)GitHub للحصول على قائمة كاملة بالتغييرات والتنزيلات. كما هو الحال دائمًا، نوصي [بالتحقق من الملفات](https://docs.decred.org/advanced/verifying-binaries) قبل التشغيل.
