--- a/journal/202306.md
+++ b/journal/202306.md
@@ -8,7 +8,7 @@ _الصورة: عمل فني بواسطة @Exitus_
 
 - تم إصدار النسخة 1.8.0 من البرنامج الأساسي لديكريد، مما أدى إلى فتح خيارات وميزات تصويت إجماع جديدة.
 - تم إصدار النسخة 0.6.2 لمنصة المبادلات اللامركزية أيضًا، للتحضير للتصويت الجديد بالإجماع ونشر العديد من التحسينات الأخرى.
-- بدأ التصويت للاقتراحين الجديدين المتفق عليهما (تغيير تقسيم الدعم ووظيفة تجزئة إثبات العمل) بمجرد تقدم عملية التحديث بشكل كافٍ في أوائل يوليو.
+- بدأ التصويت على إقتراحي الإجماع الجديدين (تغيير تقسيم الدعم ووظيفة تجزئة إثبات العمل) بمجرد تقدم عملية التحديث بشكل كافٍ في أوائل يوليو.
 - تمت الموافقة على تمويل تطوير بنية الشبكة اللامركزية لمنصة المبادلات اللامركزية لديكريد.
 
 المحتويات:
