--- a/journal/202307.md
+++ b/journal/202307.md
@@ -6,7 +6,7 @@ _الصورة: العاصفة المثالية بواسطة @Exitus_
 
 أبرز أحداث شهر يوليو:
 
-* تم الانتهاء من التصويت على تغييري الإجماع (وظيفة تجزئة إثبات العمل وتقسيم دعم إثبات العمل/إثبات الحصة) بدعم شبه إجماعي، سيتم تفعيل التغييرات في أواخر أغسطس (لذا قم بالحديث إلى الإصدار 1.8).
+* تم الانتهاء من التصويت على تغييري الإجماع (وظيفة تجزئة إثبات العمل وتقسيم مكافأة إثبات العمل/إثبات الحصة) بدعم شبه إجماعي، سيتم تفعيل التغييرات في أواخر أغسطس (لذا قم بالحديث إلى الإصدار 1.8).
 * أطلقت Cypherpunk Times موقعها الذي أعيد تسميته (Decred Magazine سابقًا) ، وأطلقت أول مشروع لها إلى جانب ديكريد للمساهمة بالمحتوى، الفيرو.
 * تم الآن ربط الديسكورد بغرف الماتريكس مرة أخرى بجسر محسّن جديد يسمح لمستخدمي الماتريكس بحظر مستخدمي الديسكورد الفرديين، كما تم تحسين إجراءات الموافقة على الأعضاء الجدد في الديسكورد.
 
@@ -27,9 +27,9 @@ _الصورة: العاصفة المثالية بواسطة @Exitus_
 
 ## التحديث إلى التفرع القادم!
 
-انتهى التصويت على تغييرين إجماعيين [لتغيير إثبات العمل إلى BLAKE3 و ](https://github.com/decred/dcps/blob/master/dcp-0011/dcp-0011.mediawiki)ASERT و[تقسيم دعم إثبات العمل/إثبات الحصة إلى ](https://github.com/decred/dcps/blob/master/dcp-0012/dcp-0012.mediawiki)1/89 والتي تم اقتراحها في الأصل على بوليتيا في مارس 2023.
+انتهى التصويت على تغييرين إجماعيين [لتغيير إثبات العمل إلى BLAKE3 و ](https://github.com/decred/dcps/blob/master/dcp-0011/dcp-0011.mediawiki)ASERT و[تقسيم مكافأة إثبات العمل/إثبات الحصة إلى ](https://github.com/decred/dcps/blob/master/dcp-0012/dcp-0012.mediawiki)1/89 والتي تم اقتراحها في الأصل على بوليتيا في مارس 2023.
 
-تمت **الموافقة** على كلا التغييرين بنسبة تزيد عن 99٪ بنعم ونسبة إقبال من الناخبين ب 60٪ . سيتم الآن [تفعيل](https://docs.decred.org/governance/consensus-rule-voting/overview/) التغييرات في الكتلة 794,368 حوالي 29 أغسطس. يمكن تتبع الوقت المتبقي في  [لوحة معلومات التصويت](https://voting.decred.org/) أو في  [أجندات ](https://dcrdata.decred.org/agendas)dcrdata.
+تمت **الموافقة** على كلا التغييرين بنسبة تزيد عن 99٪ بنعم ونسبة إقبال من الناخبين ب 60٪ . سيتم الآن [تفعيل](https://docs.decred.org/governance/consensus-rule-voting/overview/) التغييرات في الكتلة 794,368 حوالي 29 أغسطس. يمكن تتبع الوقت المتبقي في  [لوحة معلومات التصويت](https://voting.decred.org/) أو في  [أجندة ](https://dcrdata.decred.org/agendas)dcrdata.
 
 يُنصح جميع المستخدمين بالتحديث إلى أحدث [البرامج الأساسية](https://github.com/decred/decred-binaries) أو [تطبيق منصة المبادلات اللامركزية المستقل](https://github.com/decred/dcrdex/releases) أو أي  [محافظ أخرى](https://decred.org/wallets/) يتم استخدامها. كما هو الحال دائمًا، نوصي بالتحقق من الملفات قبل التشغيل.
 
