--- a/journal/202309.md
+++ b/journal/202309.md
@@ -868,4 +868,4 @@ _الصورة: حجم التداول الشهري لمنصة المبادلات 
 
 النسخة الأصلية لمجلة الديكريد لشهر سبتمبر 2023 متوفرة على هذا الرابط [هنا](https://xaur.github.io/decred-news/journal/202309).
 
-تمت الترجمة إلى اللغة العربية بواسطة: arij@. قام بالمراجعة abdulrahman4@.
+تمت الترجمة إلى اللغة العربية بواسطة: arij@. 
