--- a/journal/202309.md
+++ b/journal/202309.md
@@ -491,6 +491,8 @@ _الصورة: الصفحات في brclient v0.1.9_
 
 _الصورة: روبوت لعبة بوكر كدليل على المفهوم في واجهة المستخدم الرسومية لمُرحِّل بيسون_
 
+## الأشخاص
+
 نرحب بالمساهمين لأول مرة:
 
 - minizilla (تطوير، [dcrd](https://github.com/decred/dcrd/pull/3188))
