Update Decred Journal - October 2023 Arabic

--- a/journal/202310.md
+++ b/journal/202310.md
@@ -66,7 +66,7 @@ _[dcrd](https://github.com/decred/dcrd) هو تطبيق عقدة كامل يعم
 - تبسيط واجهة برمجة التطبيقات لجعل الحزمة [أكثر فائدة على نطاق واسع](https://github.com/decred/dcrtest/pull/17)، ليس فقط في الاختبارات، ولكن أيضًا في مقاييس الأداء وفي الكود العام غير المرتبط بالاختبارات بشكل خاص.
 - التأكد من أن كود التنظيف [يعمل دائمًا](https://github.com/decred/dcrtest/pull/18) حتى لو فشل إعداد الاختبار. يضيف هذا أيضًا علمًا للحفاظ على ملفات البيانات سليمة لتسهيل تصحيح أخطاء الاختبار.
 
-![](../img/ { _upload 202310.xx_ https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$x9esjGNzBBl8zcpUiV6hTgmAAZH3z-bErSBDgO56nyA })
+![ستكون مزامنة السلسلة الأولية أسرع بنسبة ~40% مع طلبات getdata المتزامن](../img/202310.02.1011.jpg)
 
 _الصورة: ستكون مزامنة السلسلة الأولية أسرع بنسبة ~40% مع طلبات getdata المتزامنة_
 
